* snapshot-README, snapshot-index.html: Use expressions such as 	@DATE@ rather than hardcoded dates.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49319 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/maintainer-scripts/snapshot-index.html
+++ b/maintainer-scripts/snapshot-index.html
@@ -17,68 +17,68 @@ how to sign up can be found on the GCC project home page.
 
 
 <blockquote>
-    <p> <a href="2002-01-28/gcc-20020128.tar.gz">
-	 gcc</a> January 28, 2002 snapshot, includes all languages.
+    <p> <a href="@LONG_DATE@/gcc-@DATE@.tar.gz">
+	 gcc</a> @TEXT_DATE@ snapshot, includes all languages.
 
-    <p> <a href="2002-01-28/gcc-20020121-20020128.diff.gz">
-	gcc-20020121-20020128</a> patch file to bring gcc-20020121 up to
-	gcc-20020128.
+    <p> <a href="@LONG_DATE@/gcc-@LAST_DATE@-@DATE@.diff.gz">
+	gcc-@LAST_DATE@-@DATE@</a> patch file to bring gcc-@LAST_DATE@ up to
+	gcc-@DATE@.
 
-    <p> <a href="2002-01-28/gcc-core-20020128.tar.gz">
-	 gcc-core</a> January 28, 2002 snapshot, includes just the C front
+    <p> <a href="@LONG_DATE@/gcc-core-@DATE@.tar.gz">
+	 gcc-core</a> @TEXT_DATE@ snapshot, includes just the C front
 	 end and core compiler.
 
-    <p> <a href="2002-01-28/gcc-core-20020121-20020128.diff.gz">
-	gcc-core-20020121-20020128</a> patch file to bring gcc-core-20020121
-	up to gcc-core-20020128.
+    <p> <a href="@LONG_DATE@/gcc-core-@LAST_DATE@-@DATE@.diff.gz">
+	gcc-core-@LAST_DATE@-@DATE@</a> patch file to bring gcc-core-@LAST_DATE@
+	up to gcc-core-@DATE@.
 
-    <p> <a href="2002-01-28/gcc-g++-20020128.tar.gz">
-	 gcc-g++</a> January 28, 2002 snapshot, includes just the G++ front
+    <p> <a href="@LONG_DATE@/gcc-g++-@DATE@.tar.gz">
+	 gcc-g++</a> @TEXT_DATE@ snapshot, includes just the G++ front
 	 end and runtime.
 
-    <p> <a href="2002-01-28/gcc-g++-20020121-20020128.diff.gz">
-	gcc-g++-20020121-20020128</a> patch file to bring gcc-g++-20020121
-	up to gcc-g++-20020128.
+    <p> <a href="@LONG_DATE@/gcc-g++-@LAST_DATE@-@DATE@.diff.gz">
+	gcc-g++-@LAST_DATE@-@DATE@</a> patch file to bring gcc-g++-@LAST_DATE@
+	up to gcc-g++-@DATE@.
 
-    <p> <a href="2002-01-28/gcc-g77-20020128.tar.gz">
-	 gcc-g77</a> January 28, 2002 snapshot, includes just the G77 front
+    <p> <a href="@LONG_DATE@/gcc-g77-@DATE@.tar.gz">
+	 gcc-g77</a> @TEXT_DATE@ snapshot, includes just the G77 front
 	 end and runtime.
 
-    <p> <a href="2002-01-28/gcc-g77-20020121-20020128.diff.gz">
-	gcc-g77-20020121-20020128</a> patch file to bring gcc-g77-20020121
-	up to gcc-g77-20020128.
+    <p> <a href="@LONG_DATE@/gcc-g77-@LAST_DATE@-@DATE@.diff.gz">
+	gcc-g77-@LAST_DATE@-@DATE@</a> patch file to bring gcc-g77-@LAST_DATE@
+	up to gcc-g77-@DATE@.
 
-    <p> <a href="2002-01-28/gcc-java-20020128.tar.gz">
-	 gcc-java</a> January 28, 2002 snapshot, includes just the Java
+    <p> <a href="@LONG_DATE@/gcc-java-@DATE@.tar.gz">
+	 gcc-java</a> @TEXT_DATE@ snapshot, includes just the Java
 	 front end.
 
-    <p> <a href="2002-01-28/gcc-java-20020121-20020128.diff.gz">
-	gcc-java-20020121-20020128</a> patch file to bring gcc-java-20020121
-	up to gcc-java-20020128.
+    <p> <a href="@LONG_DATE@/gcc-java-@LAST_DATE@-@DATE@.diff.gz">
+	gcc-java-@LAST_DATE@-@DATE@</a> patch file to bring gcc-java-@LAST_DATE@
+	up to gcc-java-@DATE@.
 
-    <p> <a href="2002-01-28/gcc-chill-20020128.tar.gz">
-	 gcc-chill</a> January 28, 2002 snapshot, includes just the Chill
+    <p> <a href="@LONG_DATE@/gcc-chill-@DATE@.tar.gz">
+	 gcc-chill</a> @TEXT_DATE@ snapshot, includes just the Chill
 	 front end and runtime.
 
-    <p> <a href="2002-01-28/gcc-chill-20020121-20020128.diff.gz">
-	gcc-chill-20020121-20020128</a> patch file to bring gcc-chill-20020121
-	up to gcc-chill-20020128.
+    <p> <a href="@LONG_DATE@/gcc-chill-@LAST_DATE@-@DATE@.diff.gz">
+	gcc-chill-@LAST_DATE@-@DATE@</a> patch file to bring gcc-chill-@LAST_DATE@
+	up to gcc-chill-@DATE@.
 
-    <p> <a href="2002-01-28/gcc-objc-20020128.tar.gz">
-	 gcc-objc</a> January 28, 2002 snapshot, includes just the Objective-C
+    <p> <a href="@LONG_DATE@/gcc-objc-@DATE@.tar.gz">
+	 gcc-objc</a> @TEXT_DATE@ snapshot, includes just the Objective-C
 	 front end and runtime.
 
-    <p> <a href="2002-01-28/gcc-objc-20020121-20020128.diff.gz">
-	gcc-objc-20020121-20020128</a> patch file to bring gcc-objc-20020121
-	up to gcc-objc-20020128.
+    <p> <a href="@LONG_DATE@/gcc-objc-@LAST_DATE@-@DATE@.diff.gz">
+	gcc-objc-@LAST_DATE@-@DATE@</a> patch file to bring gcc-objc-@LAST_DATE@
+	up to gcc-objc-@DATE@.
 
-    <p> <a href="2002-01-28/gcc-ada-20020128.tar.gz">
-	 gcc-ada</a> January 28, 2002 snapshot, includes just the Ada
+    <p> <a href="@LONG_DATE@/gcc-ada-@DATE@.tar.gz">
+	 gcc-ada</a> @TEXT_DATE@ snapshot, includes just the Ada
 	 front end and runtime.
 
-    <p> <a href="2002-01-28/gcc-ada-20020121-20020128.diff.gz">
-	gcc-ada-20020121-20020128</a> patch file to bring gcc-ada-20020121
-	up to gcc-ada-20020128.
+    <p> <a href="@LONG_DATE@/gcc-ada-@LAST_DATE@-@DATE@.diff.gz">
+	gcc-ada-@LAST_DATE@-@DATE@</a> patch file to bring gcc-ada-@LAST_DATE@
+	up to gcc-ada-@DATE@.
 
 </blockquote>
 
@@ -108,7 +108,7 @@ gcc.gnu.org:/pub/gcc/snapshots.
 <address><a href="mailto:gcc-bugs@gcc.gnu.org">gcc-bugs@gcc.gnu.org</a>
 
 <p>
-Last modified January 28, 2002</address>
+Last modified @TEXT_DATE@</address>
 </body>
 
 </html>
