* snapshot-index.html: Improve markup.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49617 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/maintainer-scripts/snapshot-index.html
+++ b/maintainer-scripts/snapshot-index.html
@@ -1,19 +1,21 @@
 <html>
+
 <head>
 <title>GCC Snapshots</title>
 </head>
 
 <body>
 <h1>GCC Snapshots</h1>
-<hr>
 
-The <a href ="http://gcc.gnu.org/">GCC Project</a> makes
+<hr />
+
+<p>The <a href ="http://gcc.gnu.org/">GCC Project</a> makes
 periodic snapshots of the GCC source tree available to the public
-for testing purposes.
+for testing purposes.</p>
 
-If you are planning to download and use one of our snapshots, then
+<p>If you are planning to download and use one of our snapshots, then
 we highly recommend you join the GCC developers list.  Details for
-how to sign up can be found on the GCC project home page.
+how to sign up can be found on the GCC project home page.</p>
 
 
 <blockquote>
@@ -86,29 +88,30 @@ how to sign up can be found on the GCC project home page.
 installation, you may find the daily RPM snapshots at:
 <a href="http://www.codesourcery.com/gcc-snapshots.html">
 http://www.codesourcery.com/gcc-snapshots.html </a>
-easier to install.
+easier to install.</p>
 
 <p>Note at times you may find newer directories on the server with limited
 permissions.  These represent snapshots that have not yet been verified
-as correct, or are known to be incorrect.
+as correct, or are known to be incorrect.</p>
 
 <p>When a particular snapshot is ready for public consumption the directory
 permissions are relaxed, the LATEST-IS- file is updated and a message is
-sent to the GCC list.
+sent to the GCC list.</p>
 
 <p>Using a snapshot before it's officially made available is an unwise thing
-to do since it may become impossible to update to an official snapshot.
+to do since it may become impossible to update to an official snapshot.</p>
 
-<p>Old snapshots can be found on the ftp server
-<a href=ftp://gcc.gnu.org/pub/gcc/snapshots/> 
-gcc.gnu.org:/pub/gcc/snapshots.
+<p>Old snapshots can be found on the ftp server <a
+href="ftp://gcc.gnu.org/pub/gcc/snapshots/">ftp://gcc.gnu.org:/pub/gcc/snapshots</a>.</p>
 
-<hr>
-<address><a href="mailto:gcc@gcc.gnu.org">gcc@gcc.gnu.org</a>
-<address><a href="mailto:gcc-bugs@gcc.gnu.org">gcc-bugs@gcc.gnu.org</a>
+<hr />
 
-<p>
-Last modified @TEXT_DATE@</address>
+<address>
+<a href="mailto:gcc@gcc.gnu.org">gcc@gcc.gnu.org</a>
+<a href="mailto:gcc-bugs@gcc.gnu.org">gcc-bugs@gcc.gnu.org</a>
+
+<p>Last modified @TEXT_DATE@</p>
+</address>
 </body>
 
 </html>
