* snapshot-README: Mention how the snapshot was generated. 	* snapshot-index.html: Ditto.  Further sync with snapshot-README.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76037 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/maintainer-scripts/snapshot-index.html
+++ b/maintainer-scripts/snapshot-index.html
@@ -15,6 +15,8 @@ for testing purposes.</p>
 we highly recommend you join the GCC developers list.  Details for
 how to sign up can be found on the GCC project home page.</p>
 
+<p>This snapshot has been generated from the GCC @BRANCH@ CVS branch
+with the following options: @EXPORT@</p>
 
 <blockquote>
     <p> <a href="gcc-@RELEASE@.tar.bz2">
@@ -52,9 +54,6 @@ how to sign up can be found on the GCC project home page.</p>
 </p>When a particular snapshot is ready for public consumption the LATEST-IS-
 file is updated and a message is sent to the gcc list.  Please do not use
 a snapshot before it has been announced that way.</p>
-
-<p>Old snapshots can be found on the ftp server <a
-href="ftp://gcc.gnu.org/pub/gcc/snapshots/">ftp://gcc.gnu.org:/pub/gcc/snapshots</a>.</p>
 
 <hr />
 
